Issue #2988970 by phenaproxima, tim.plunkett, tedbow, bnjmnm, lauriii, sugaroverflow, DyanneNova, balsama, webchick, xjm, dead_arm, Gábor Hojtsy, worldlinemine: Layout Builder should make it easier to modify the default layout for an entity type when viewing an entity
(cherry picked from commit 30abfa6af64287c7c6fb0809fa25698597f6197b)

--- a/core/modules/layout_builder/css/layout-builder.css
+++ b/core/modules/layout_builder/css/layout-builder.css
@@ -83,6 +83,23 @@
   pointer-events: none;
 }
 
+.layout-builder__message .messages {
+  background-repeat: no-repeat;
+}
+.layout-builder__message--defaults .messages {
+  background-image: url('../images/globe.svg');
+}
+.layout-builder__message--overrides .messages {
+  background-image: url('../images/location.svg');
+}
+
+/**
+ * @todo Remove Umami specific styling in https://www.drupal.org/node/3043228.
+ */
+.layout-builder__message .messages .messages__content {
+  background: none;
+}
+
 #drupal-off-canvas .layout-selection li {
   display: block;
   padding-bottom: 1em;
